--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:name="${applicationName}"
-        android:label="Whisper"
+        android:label="Beguile AI"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
