Initial commit with all new code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   # TTS & Celebrations
   flutter_tts: ^3.8.3
   confetti: ^0.7.0
+  http: ^1.5.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -92,6 +94,7 @@ flutter:
     - assets/images/onboarding/
     - assets/images/categories/
     - assets/legal/
+    - .env
 
 
   # The following line ensures that the Material Icons font is
